<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.6">
  <DUT Name="udtHourlyData" Id="{b9ba998e-1b9a-478b-bdd0-cb05a6b759bb}">
    <Declaration><![CDATA[TYPE udtHourlyData :
STRUCT
	GoodCount :DINT :=0;
	ScrapCount :DINT :=0;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>